--- a/scss/home.html
+++ b/scss/home.html
@@ -148,7 +148,7 @@
                     <p class="heading">CHAT</p>
                     <i class="fa-solid fa-phone"></i>
                     <i class="fa-solid fa-video"></i>
-                    <i class="fa-solid fa-ellipsis"></i>
+                    <button class="minibox"><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
             </div>
             <div class="chat-area">
